# docassemble-MATC1ADivorceJointPetition

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MATC1ADivorceJointPetition/data/questions/: divorce_joint_petition.yml  joint-motion-to-file-marriage-certificate-late.yml  ma1a_portable_schema.yml  main.yml  main_divorce_joint_petition.yml  main_joint_petition.yml  temporary_orders_packet.yml
docassemble/MATC1ADivorceJointPetition/data/sources/: DataDictionaryV2.xlsx
docassemble/MATC1ADivorceJointPetition/data/templates/: jointpetitionfordivorce_next_steps.docx
docassemble/MATC1AJointPetition/data/questions/: main-1a-divorce.yml
